# PacTech

./: .breakpoints  config.py  main.py  models.py  pyproject.toml  routes.py  shop_menu.db
static/css/: gofra_style.css
templates/: index.html
